[B]Version 0.0.9[/B]
- don't set the custom "emby" unique ID as the default (fixes #13)
- properly import tags from "TagItems" instead of "Tags" (fixes #19)

[B]Version 0.0.8[/B]
-  don't attach the container type to direct stream URLs
- move lib/semantic_version to script.module.semantic_version 2.8.4
- fix authentication by username (manual)
- adjust kodi.mediaimporter extension point to changes in Kodi
- support "Emby Media Importer > Play ... > Direct Play / Direct Stream" context menu item
- support "Emby Media Importer > Synchronize" context menu item
- support "Emby Media Importer > Refresh metadata" context menu item

[B]Version 0.0.7[/B]
- convert all unique ID keys to lowercase
- import critic rating as tomatometerallcritics
- import local or remote trailer
- fix exceptions / crashes when playing non-imported videos
- support authentication with Emby Connect
- support fast synchronization after a successful initial full synchronization
- add an import-specific setting to force a full synchronization

[B]Version 0.0.6[/B]
- fix playback stopped / ended callback handling
- fix reporting of playback resume point when playback stopped 
- process UNC / DVD / Blu-Ray paths before passing them to Kodi
- improve mapping of studios, overviews, MPAA and video / audio streams
- redact HTTP request bodies that might contain a password
- download the server's icon to avoid unsupported HTTP HEAD requests
- support displaying server messages as notifications
- reduce authentication requests

[B]Version 0.0.5[/B]
- make Direct Play configurable
- Fix crash in emby.player.Player callbacks
- automatically add external subtitles when starting playback of a video
- make external subtitles configurable
- make importing collections / movie sets configurable (enabled by default)
- support secure websocket connections
- improve websocket connections to remote Emby servers

[B]Version 0.0.4[/B]
- Fix importing logo / clearlogo artwork