@@ -146,12 +146,14 @@ PROPERTY_ITEM_LOCAL_TRAILER_COUNT = 'LocalTrailerCount'
 PROPERTY_ITEM_REMOTE_TRAILERS = 'RemoteTrailers'
 PROPERTY_ITEM_REMOTE_TRAILERS_URL = 'Url'
 PROPERTY_ITEM_PEOPLE = 'People'
+PROPERTY_ITEM_PEOPLE_ID = 'Id'
 PROPERTY_ITEM_PEOPLE_NAME = 'Name'
 PROPERTY_ITEM_PEOPLE_TYPE = 'Type'
 PROPERTY_ITEM_PEOPLE_TYPE_ACTOR = 'Actor'
 PROPERTY_ITEM_PEOPLE_TYPE_WRITER = 'Writer'
 PROPERTY_ITEM_PEOPLE_TYPE_DIRECTOR = 'Director'
 PROPERTY_ITEM_PEOPLE_ROLE = 'Role'
+PROPERTY_ITEM_PEOPLE_PRIMARY_IMAGE_TAG = 'PrimaryImageTag'
 PROPERTY_ITEM_ROLE = 'Role'
 PROPERTY_ITEM_INDEX_NUMBER = 'IndexNumber'
 PROPERTY_ITEM_PARENT_INDEX_NUMBER = 'ParentIndexNumber'
